# Xylem

./: .clang-format  AUTHORS  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  codeql.yml
cmake/: xylem-sanitizers.cmake  xylem-tests.cmake  xylem-utils.cmake
docs/: FAQ.md  build.md
examples/: CMakeLists.txt
include/: xylem.h
include/deprecated/: c11-threads.h
include/xylem/: xylem-base64.h  xylem-bswap.h  xylem-heap.h  xylem-rbtree.h  xylem-sha1.h  xylem-varint.h  xylem-waitgroup.h
src/: xylem-base64.c  xylem-bswap.c  xylem-heap.c  xylem-rbtree.c  xylem-ringbuf.c  xylem-sha1.c  xylem-sha256.c  xylem-thrdpool.c  xylem-varint.c  xylem-waitgroup.c
src/platform/: platform.h
tests/: CMakeLists.txt  assert.h  test-base64.c  test-bswap.c  test-heap.c  test-rbtree.c  test-varint.c  test-waitgroup.c
